--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM6JxzT9VIVmJz9V7ly31mj",
+      "authorship_tag": "ABX9TyO46OMVHBpjlXGNFg1jd730",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,23 +36,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2oiTAtF6gJgf",
-        "outputId": "152ec8f3-3d6c-48e8-eaf1-3c7bd3a10c3c"
+        "outputId": "4ff9021f-2ec5-4cea-b51d-2b532ec422cf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-17 14:45:43--  https://raw.githubusercontent.com/Nocimaa/Binance_Bot/refs/heads/main/btc_1h_adx_2017-08-17_to_2025-09-17(in).csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "--2025-09-17 16:27:59--  https://raw.githubusercontent.com/Nocimaa/Binance_Bot/refs/heads/main/btc_1h_adx_2017-08-17_to_2025-09-17(in).csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 28620838 (27M) [text/plain]\n",
             "Saving to: ‘btc_1h_adx_2017-08-17_to_2025-09-17(in).csv’\n",
             "\n",
-            "btc_1h_adx_2017-08- 100%[===================>]  27.29M  --.-KB/s    in 0.09s   \n",
+            "btc_1h_adx_2017-08- 100%[===================>]  27.29M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-09-17 14:45:44 (303 MB/s) - ‘btc_1h_adx_2017-08-17_to_2025-09-17(in).csv’ saved [28620838/28620838]\n",
+            "2025-09-17 16:28:01 (224 MB/s) - ‘btc_1h_adx_2017-08-17_to_2025-09-17(in).csv’ saved [28620838/28620838]\n",
             "\n"
           ]
         }
@@ -65,7 +65,9 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "\n",
+        "#Test"
       ],
       "metadata": {
         "id": "en6-eWhqgiaB"
@@ -108,7 +110,7 @@
         "id": "zmOryAAwgtC7",
         "outputId": "efcacb05-4ee8-44d8-9f54-0c6047e0a222"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +139,7 @@
         "id": "y1U0Miu7gw_b",
         "outputId": "df52005e-6474-4abf-981e-e13801980a87"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +573,7 @@
       "metadata": {
         "id": "P16J24ChiDe9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +592,7 @@
       "metadata": {
         "id": "6TOXhziajFuL"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +605,7 @@
       "metadata": {
         "id": "zdUb3aTujKqj"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -627,7 +629,7 @@
       "metadata": {
         "id": "B9A7VhBZj5ty"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +662,7 @@
       "metadata": {
         "id": "aygb4S84j-de"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -675,7 +677,7 @@
       "metadata": {
         "id": "zsVOmjhEkKJH"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +708,7 @@
         "id": "f4vTCmLskcR7",
         "outputId": "6949b9aa-0648-4cfc-c374-60d77e3f4639"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +808,7 @@
         "id": "mVPjeLlBk8Ft",
         "outputId": "9e641f49-2f1b-4182-d851-203c44225cff"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +903,7 @@
       "metadata": {
         "id": "Zifd7Mo5q_nf"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -916,7 +918,7 @@
         "id": "ODqHQRJTlY9w",
         "outputId": "55369beb-0954-4748-9545-0097c49997d7"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -942,7 +944,7 @@
         "id": "Y8eLiYEEMC-o",
         "outputId": "6bb7db34-9876-4d07-cfed-e3ed2ce9c951"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +1013,7 @@
         "id": "Kl8Kr0k7MIqS",
         "outputId": "bf0c9787-a4e8-4e0b-ca5d-f5783e260c13"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
